--- a/R/A02_Data_and_Tools.Rmd
+++ b/R/A02_Data_and_Tools.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Portfoliomanagement and Financial Analysis - Assignment 2"
 subtitle: "Submit until Monday 2020-09-28, 13:00"
-author: "Lastname, Surname"
+author: "Merve, Can"
 output: html_notebook
 ---
 
@@ -11,6 +11,20 @@ pacman::p_load(tidyverse,tidyquant,FFdownload,tsibble)
 ```
 
 **Please** remember to put your assignment solutions in `rmd` format using **many** chunks and putting readable text in between, similar to my examples given in Research Methods and Assignment 1! Also, each student has to select his own set of 10 stocks having data available as of `2000-01-01`. Select by Sharpe-ratio, dominance or any other method (e.g. matching your first name).
+
+
+# IPO <2000
+SP500 <- tq_index("SP500")
+NASDAQ <- tq_exchange("NASDAQ")
+NYSE <- tq_exchange("NYSE") 
+
+stocks.selection <- SP500 %>% 
+  inner_join(rbind(NYSE,NASDAQ) %>% select(symbol,last.sale.price,market.cap,ipo.year),by=c("symbol")) %>%
+  filter(ipo.year<2000&!is.na(market.cap)) %>% 
+  arrange(desc(weight)) %>% # sort in descending order
+  slice(1:10)
+
+
 
 ## Exercise 1: Performance Analysis of Portfolios
 
@@ -22,13 +36,180 @@ Create (using four of the ten stocks) multiple portfolios using `tq_portfolio()`
 
 DO a performance analysis a la `vignette("TQ05-performance-analysis-with-tidyquant")`.
 
+
+
+# Dataset Apple, Microsoft, Amazon and Adobe returns
+
+stocks.returns <- c("AAPL", "MSFT", "AMZN", "ADBE") %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+                 
+                 
+                 
+## Equally weighted portfolio
+
+portf.equ <-tq_portfolio(data = stocks.returns,
+            assets_col = symbol,
+            returns_col = monthly.returns,
+            weights = c(0.25,0.25,0.25,0.25),
+            col_rename = NULL,
+            wealth.index = FALSE)
+            
+
+
+## Market value weighted portfolio
+
+# Market values
+
+100/(1857.18+1518+1502.6+225.63)*1857.18 # 0.36 AAPL
+
+100/(1857.18+1518+1502.6+225.63)*1518 # 0.30 MSFT
+
+100/(1857.18+1518+1502.6+225.63)*1502.6 # 0.30 AMZN
+
+100/(1857.18+1518+1502.6+225.63)*225.63 # 0.04 ADBE
+
+
+portf.marval <- tq_portfolio(data = stocks.returns,
+             assets_col = symbol,
+             returns_col = monthly.returns,
+             weights = c(0.36,0.3,0.3,0.04),
+             col_rename = NULL,
+             wealth.index = FALSE)
+
+
+# Duplicate stocks.returns 4 times
+
+stocks.returns.mult <- tq_repeat_df(stocks.returns, n = 4)
+
+
+weights <- c(0.36, 0.30, 0.30, 0.04,
+             0.04, 0.36, 0.30, 0.30,
+             0.30, 0.04, 0.36, 0.30,
+             0.30, 0.30, 0.04, 0.36)
+             
+weights.table <- tibble(c("AAPL", "MSFT", "AMZN", "ADBE")) %>%
+    tq_repeat_df(n = 4) %>%
+    bind_cols(tibble(weights)) %>%
+    group_by(portfolio)
+
+
+# Scale to multiple portfolios
+portf.marval.mult <- tq_portfolio(data = stocks.returns.mult,
+             assets_col = symbol,
+             returns_col = monthly.returns,
+             weights = weights_table,
+             col_rename = NULL,
+             wealth.index = FALSE)
+
+
+## Performance Analysis
+
+# Baseline Returns
+
+baseline.returns <- "XLK" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly", 
+                 col_rename = "baseline.returns")
+
+# My Portfolios
+
+portf.equ
+portf.marval
+portf.marval.mult
+
+
+# Merging Portfolio with Baseline
+
+equ.bl <- left_join(portf.equ, baseline.returns , by = "date")
+
+marval.bl <- left_join(portf.marval, baseline.returns , by = "date")
+
+marval.mult.bl <- left_join(portf.marval.mult, baseline.returns , by = "date")
+
+
+# Computing CAPM Table
+
+equ.bl %>% tq_performance(Ra = portfolio.returns, Rb = baseline.returns, performance_fun = table.CAPM)
+
+marval.bl %>% tq_performance(Ra = portfolio.returns, Rb = baseline.returns, performance_fun = table.CAPM)
+
+marval.mult.bl %>% tq_performance(Ra = portfolio.returns, Rb = baseline.returns, performance_fun = table.CAPM)
+
+
+# Sharpe Ratio
+
+equ.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = SharpeRatio)
+
+marval.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = SharpeRatio)
+
+marval.mult.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = SharpeRatio)
+
+# Annualized Returns
+
+equ.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = table.AnnualizedReturns)
+
+marval.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = table.AnnualizedReturns)
+
+marval.mult.bl %>% tq_performance(Ra = portfolio.returns, Rb = NULL, performance_fun = table.AnnualizedReturns)
+
+
+
+## Algorithmic Trading DOES NOT WORK
+ 
+library(rvest)
+library(pbapply)
+library(TTR)
+library(dygraphs)
+library(lubridate)
+
+
+AAPL <- tq_get("AAPL", get = "stock.prices", from = "2000-01-01", to = "2019-12-31")
+
+AMZN <- tq_get("AMZN", get = "stock.prices", from = "2000-01-01", to = "2019-12-31")
+
+MSFT <- tq_get("MSFT", get = "stock.prices", from = "2000-01-01", to = "2019-12-31")
+
+ADBE <- tq_get("ADBE", get = "stock.prices", from = "2000-01-01", to = "2019-12-31")
+
+
+stocks <- cbind(AAPL$adjusted,AMZN$adjusted,MSFT$adjusted,ADBE$adjusted)
+
+data.frame(sma200=SMA(AAPL$adjusted, 200),sma50=SMA(AAPL$adjusted, 50))%>%head()
+
+
+
+stock.list<-'https://www.loyal3.com/stocks'
+stocks<-read_html(stock.list)
+stocks.names<-html_nodes(stocks,'.company-name')
+stocks.names<-html_text(stocks.names)
+
+
+library(rvest)
+library(TTR)
+library(lubridate)
+
+sma.stocks.returns <- SMA(stocks.returns,[, "monthly.returns"] n=50)
+
+
+
+
 ## Exercise 2: The mu/sigma diagram
 
 For the 10 stocks in your sample, calculate mu and sigma for the entire and 3 subperiods. Plot all four combinations in a mu-sigma diagram.
 
 Next, use the power of `tsibble` to calculate rolling/growing versions of mu and sigma (e.g. start with 6 months of data). Try to plot the changing mu and sigma via an animation using `gganimate` (see [here](https://www.datanovia.com/en/blog/gganimate-how-to-create-plots-with-beautiful-animation-in-r/)).
 
-```{r}
+
 pacman::p_load(gganimate,gifski,png,gapminder)
 p <- ggplot(
 gapminder,
@@ -42,11 +223,352 @@ labs(x = "GDP per capita", y = "Life expectancy")
 p
 p + transition_time(year) +
 labs(title = "Year: {frame_time}")
-```
+
+
+
+
+# Entire period 2000-2019
+
+stocks.selection.returns <- stocks.selection$symbol %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+
+# First subperiod 2000-2001
+
+stocks.selection.returns1 <- stocks.selection$symbol %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2001-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+                 
+
+
+# Second subperiod 2009-2010
+
+stocks.selection.returns2 <- stocks.selection$symbol %>%
+    tq_get(get  = "stock.prices",
+           from = "2009-01-01",
+           to   = "2010-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+
+# Third subperiod 2018-2019
+
+stocks.selection.returns3 <- stocks.selection$symbol %>%
+    tq_get(get  = "stock.prices",
+           from = "2018-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+
+## mu and sigma
+
+mu <- mean(stocks.selection.returns$monthly.returns)
+
+mu1 <- mean(stocks.selection.returns1$monthly.returns)
+
+mu2 <- mean(stocks.selection.returns2$monthly.returns)
+
+mu3 <- mean(stocks.selection.returns3$monthly.returns)
+
+
+sigma <- StdDev(stocks.selection.returns$monthly.returns)
+
+sigma1 <- StdDev(stocks.selection.returns1$monthly.returns)
+
+sigma2 <- StdDev(stocks.selection.returns2$monthly.returns)
+
+sigma3 <- StdDev(stocks.selection.returns3$monthly.returns)
+
+
+# Mu-Sigma Diagram
+
+plot(stocks.selection.returns$monthly.returns,dnorm(stocks.selection.returns$monthly.returns, mu, sigma),xlab="sigma",ylab="µ", main="Mu-Sigma Diagram", col="red")
+
+plot(stocks.selection.returns1$monthly.returns,dnorm(stocks.selection.returns1$monthly.returns, mu1, sigma1),xlab="sigma",ylab="µ", main="Mu-Sigma Diagram", col="pink")
+
+plot(stocks.selection.returns2$monthly.returns,dnorm(stocks.selection.returns2$monthly.returns, mu2, sigma2),xlab="sigma",ylab="µ",main="Mu-Sigma Diagram", col="peachpuff")
+
+plot(stocks.selection.returns3$monthly.returns,dnorm(stocks.selection.returns3$monthly.returns, mu3, sigma3),xlab="sigma",ylab="µ", main="Mu-Sigma Diagram", col="royalblue")
+
+
+
+# Rolling/Growing Versions of Mu and Sigma
+
+# Function with Window Size 6
+
+rolling.mu <- rollify(mean,window = 6)
+
+rolling.sigma <- rollify(StdDev,window = 6)
+
+
+
+# Rolling Version of function mu (µ)
+
+rm <- mutate(stocks.selection.returns, mean_5 = rolling.mu(monthly.returns))
+
+rm1 <- mutate(stocks.selection.returns1, mean_5 = rolling.mu(monthly.returns))
+
+rm2 <- mutate(stocks.selection.returns2, mean_5 = rolling.mu(monthly.returns))
+
+rm3 <- mutate(stocks.selection.returns3, mean_5 = rolling.mu(monthly.returns))
+
+
+# Rolling Version of Function Sigma 
+
+rs <- mutate(stocks.selection.returns, StdDev_5 = rolling.sigma(monthly.returns))
+
+rs1 <- mutate(stocks.selection.returns1, StdDev_5 = rolling.sigma(monthly.returns))
+
+rs2 <- mutate(stocks.selection.returns1, StdDev_5 = rolling.sigma(monthly.returns))
+
+rs3 <- mutate(stocks.selection.returns1, StdDev_5 = rolling.sigma(monthly.returns))
+
+
+## Plots with Animation
+
+library(ggplot2)
+library(gganimate)
+theme_set(theme_bw())
+
+
+# Merging Mu and Sigma into one Dataset
+
+rolling.mu.sigma <- na.omit(cbind(rm,rs$StdDev_5))
+
+rolling.mu.sigma1 <- na.omit(cbind(rm1,rs1$StdDev_5))
+
+rolling.mu.sigma2 <- na.omit(cbind(rm2,rs2$StdDev_5))
+
+rolling.mu.sigma3 <- na.omit(cbind(rm3,rs3$StdDev_5))
+
+
+# (Renaming colum 5)
+
+colnames(rolling.mu.sigma)[colnames(rolling.mu.sigma) == '...5'] <- 'StdDev_5'
+
+colnames(rolling.mu.sigma1)[colnames(rolling.mu.sigma1) == '...5'] <- 'StdDev_5'
+
+colnames(rolling.mu.sigma2)[colnames(rolling.mu.sigma2) == '...5'] <- 'StdDev_5'
+
+colnames(rolling.mu.sigma3)[colnames(rolling.mu.sigma3) == '...5'] <- 'StdDev_5'
+
+
+# Animated Plotting (if error 'dev.off()')
+
+p <- ggplot(rolling.mu.sigma,aes(StdDev_5, mean_5, color=symbol )) +
+        geom_point(show.legend = FALSE, alpha = 0.7) +
+        scale_color_viridis_d() +
+        labs(main="Mu-Sigma Diagram", 
+        x = "sigma", 
+        y = "µ") +
+        transition_time(date) +
+        labs(title = "Date: {frame_time}")
+       
+
+p1 <- ggplot(rolling.mu.sigma1,aes(StdDev_5, mean_5, color=symbol ))+
+        geom_point(show.legend = FALSE, alpha = 0.7) +
+        scale_color_viridis_d() +
+        labs(main="Mu-Sigma Diagram", 
+        x = "sigma", 
+        y = "µ") + 
+        transition_time(date) +
+        labs(title = "Date: {frame_time}")
+
+p2 <- ggplot(rolling.mu.sigma2,aes(StdDev_5, mean_5, color=symbol ))+
+        geom_point(show.legend = FALSE, alpha = 0.7) +
+        scale_color_viridis_d() +
+        labs(main="Mu-Sigma Diagram", 
+        x = "sigma", 
+        y = "µ") + 
+        transition_time(date) +
+        labs(title = "Date: {frame_time}")
+
+
+p3 <- ggplot(rolling.mu.sigma3,aes(StdDev_5, mean_5, color=symbol ))+
+        geom_point(show.legend = FALSE, alpha = 0.7) +
+        scale_color_viridis_d() +
+        labs(main="Mu-Sigma Diagram", 
+        x = "sigma", 
+        y = "µ") + 
+        transition_time(date) +
+        labs(title = "Date: {frame_time}")
+
+
+
+
+
+
 
 ## Exercise 3: Rolling regressions
 
 Perform static and rolling regressions of four of your assets (monthly data, yearly window) on the S&P500 as well as the three Fama-French Factors (Mkt.RF, SMB and HML). Visualize the changing alphas and betas over time. You can use [this example](https://www.business-science.io/code-tools/2017/04/04/tidyquant-0-5-0.html), but I would prefer a use of the `tsibble`-package.
+
+# 4 Selected Datasets
+
+stocks.returns
+
+AAPL <- "AAPL" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+MSFT <- "MSFT" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+AMZN <- "AMZN" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+
+ADBE <- "ADBE" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    group_by(symbol) %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly")
+
+# Fama-French Data
+# if error: library(timetk)
+
+?FFdownload()
+tempf <- tempfile(fileext = ".RData"); 
+tempd <- tempdir(); 
+temptxt <- tempfile(fileext = ".txt")
+inputlist <- c("F-F_Research_Data_Factors","F-F_Momentum_Factor","F-F_ST_Reversal_Factor","F-F_LT_Reversal_Factor")
+
+
+FFdownload(exclude_daily=TRUE,tempdir=tempd,download=TRUE,download_only=FALSE,inputlist=inputlist)
+
+tempf2 <- tempfile(fileext = ".RData"); 
+tempd2 <- tempdir()
+FFdownload(output_file = tempf2,tempdir = tempd2,exclude_daily = TRUE, download = TRUE, download_only=FALSE, listsave=temptxt)
+load(tempf2)
+
+FFdownload$x_25_Portfolios_5x5$monthly$average_value_weighted_returns
+
+
+
+FF.factors <- FFdownload$`x_F-F_Research_Data_Factors`$monthly$Temp2 %>% 
+          tk_tbl(rename_index="date") %>% # make tibble
+          mutate(date=as.Date(date, frac=1)) %>% # make proper month-end date format
+          gather(key=FFvar,value = price,-date) %>% # gather into tidy format
+          spread(factors,key = FFvar,value = price) %>%
+          select(date,Mkt.RF, SMB, HML)
+          
+
+
+# Merge datasets
+
+stocks.ff.factors <- na.omit(left_join(stocks.returns,FF.factors,"date"))
+
+AAPL.ff.factors <- na.omit(left_join(AAPL,FF.factors,"date"))
+
+AMZN.ff.factors <- na.omit(left_join(AMZN,FF.factors,"date"))
+
+MSFT.ff.factors <- na.omit(left_join(MSFT,FF.factors,"date"))
+
+ADBE.ff.factors <- na.omit(left_join(ADBE,FF.factors,"date"))
+
+
+
+# Simple Linear Regressions
+
+lin.reg.ret <- lm(monthly.returns ~ date, stocks.ff.factors) 
+summary(lin.reg.ret)
+
+AAPL.lin.reg.ret <- lm(monthly.returns ~ date, AAPL.ff.factors) 
+summary(AAPL.lin.reg.ret)
+
+AMZN.lin.reg.ret <- lm(monthly.returns ~ date, AMZN.ff.factors) 
+summary(AMZN.lin.reg.ret)
+
+MSFT.lin.reg.ret <- lm(monthly.returns ~ date, MSFT.ff.factors) 
+summary(MSFT.lin.reg.ret)
+
+ADBE.lin.reg.ret <- lm(monthly.returns ~ date, ADBE.ff.factors) 
+summary(ADBE.lin.reg.ret)
+
+
+# does not work
+
+Mkt.RF.lin.reg <- lm(Mkt.RF ~ date, FF.factors) 
+summary(Mkt.RF.lin.reg)
+
+HML.lin.reg <-lm(HML ~ date, FF.factors) 
+summary(HML.lin.reg)
+
+SMB.lin.reg <-lm(SMB ~ date, FF.factors) 
+summary(HML.lin.reg)
+
+
+# Rolling Regression Function
+
+rolling.reg <- rollify(lm, window = 12)
+
+
+rolling.reg <- function(data_xts) {
+  lm(monthly_ret_rf ~ mkt.rf, data = as_data_frame(data_xts)) %>%
+        coef()}
+
+joined_data <- stocks.ff.factors %>% 
+    tq_mutate(mutate_fun = rollapply,
+              width = 6,
+              FUN        = rolling.reg,
+              by.column  = FALSE,
+              col_rename = c("alpha", "beta"))
+
+
+
+
+#Alpha 
+
+baseline.ret <- "XLK" %>%
+    tq_get(get  = "stock.prices",
+           from = "2000-01-01",
+           to   = "2019-12-31") %>%
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly", 
+                 col_rename = "baseline.returns")
+                 
+                 
+stocks.baseline <- left_join(stocks.returns, baseline.ret , by = "date")           
+CAPM <- stocks.baseline %>% tq_performance(Ra = monthly.returns, Rb = baseline.returns, performance_fun = table.CAPM)                    
+
+  
 
 
 
